plugins {
    id 'java'
    id("io.qameta.allure") version '4.1.0'

}

group = 'com.azarsen4'
version = '1.0-SNAPSHOT'

allure {
    allureReport {
        version.set("2.44.1")
    }
    adapter {
        aspectjWeaver.set(true)
        frameworks {
            junit5 {
                adapterVersion.set("2.35.3")
            }
        }
    }

}
repositories {
    mavenCentral()
}

dependencies {
    testImplementation(
             'com.codeborne:selenide:7.9.4',
            'org.junit.jupiter:junit-jupiter:5.10.0',
            'org.slf4j:slf4j-simple:2.0.7',
            'io.qameta.allure:allure-selenide:2.35.3'
    )
}

tasks.withType(Test) {
    systemProperties(System.getProperties())
    useJUnitPlatform()
}
test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) // фиксируем Java 21
    }
}


tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-Xlint:deprecation"
}

task demoqa_test(type: Test) {
    useJUnitPlatform {
        includeTags("demoqa")
    }
}